original engine moved to editor

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "webpack.config.js",
   "dependencies": {
     "@babel/core": "^7.12.16",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.1",
