--- a/api/package.json
+++ b/api/package.json
@@ -4,12 +4,23 @@
   "description": "API for network and local tasks required by adventure-react",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon /dist/server.ts",
+    "test": "jest"
   },
   "author": "Kevin Fredericks",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "ps": "^1.0.0"
+    "@prisma/client": "^3.8.1",
+    "@types/node": "^17.0.10",
+    "express": "^4.17.2",
+    "global": "^4.4.0",
+    "prisma": "^3.8.1",
+    "ps": "^1.0.0",
+    "sqlite": "3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
