--- a/api/package.json
+++ b/api/package.json
@@ -14,10 +14,12 @@
     "@types/node": "^17.0.10",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "express-graphql": "^0.12.0",
     "global": "^4.4.0",
+    "graphql": "^16.3.0",
     "prisma": "^3.8.1",
     "ps": "^1.0.0",
-    "sqlite": "3",
+    "sqlite": "^4.0.23",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
